[gd_scene load_steps=18 format=2]

[ext_resource path="res://game/weapons/Shocker.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/animation_shocker.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=531]

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=522]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=524]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=525]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=527]
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=526]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=528]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=135]
animations = [ {
"frames": [ SubResource( 71 ), SubResource( 522 ), SubResource( 524 ), SubResource( 525 ), SubResource( 527 ), SubResource( 526 ), SubResource( 528 ), SubResource( 71 ), SubResource( 61 ), SubResource( 59 ), null ],
"loop": false,
"name": "deactivate",
"speed": 20.0
}, {
"frames": [ SubResource( 59 ), SubResource( 59 ), SubResource( 59 ), SubResource( 61 ), SubResource( 71 ), SubResource( 61 ) ],
"loop": true,
"name": "loop",
"speed": 20.0
} ]

[sub_resource type="Shader" id=529]
code = "shader_type canvas_item;
render_mode blend_premul_alpha;

uniform float size_px: hint_range(0.0, 40.0, 1.0) = 40; 
uniform float hole_size_px: hint_range(0.0, 40.0, 1.0) = 20;
uniform int outside_trans_px = 0;
uniform int inside_trans_px = 0;


void fragment() {
		
	
	vec2 texture_center = vec2(0.5, 0.5);
	vec2 texture_size = vec2(80.0); // najbolje je, če je tekstura kvadrat
	float texture_ratio = TEXTURE_PIXEL_SIZE.x / TEXTURE_PIXEL_SIZE.y; // razmerje ekrana, da ni elipsaste oblike (pixel size x = 1/text oz. screen width)
	
	vec2 grid_uv = round(UV * texture_size.x) / texture_size.y; // pixelizacija efekta
	
	vec2 center_corrected = vec2((texture_center.x - (1.0 - texture_ratio)/2.0)/texture_ratio, texture_center.y);
	
	// texli v pixle
	float size = size_px / texture_size.x;
	float hole_size = hole_size_px / texture_size.x;
	float outside_trans = float(outside_trans_px) / texture_size.x;
	float inside_trans = float(inside_trans_px) / texture_size.x;
	
	// aplikacija razmerja ekrana
	vec2 scale_uv = (grid_uv - vec2(0.5, 0.0)) / vec2 (texture_ratio, 1.0) + vec2 (0.5, 0.0);
	// scale_uv = (skrin uv - offset x, da ga premaknemo v origin, da ga lahko pravilno skejlamo) / ratio x osi, ker je popačeno samo v eno smer + offset x, da ga popravimo s tistim, ki smo ga želeli
	
	float shape = (1.0 - smoothstep(size - outside_trans, size, length(scale_uv - center_corrected))) *
		smoothstep(hole_size - inside_trans, hole_size, length(scale_uv - center_corrected));
	
	COLOR.rgb = vec3(shape);
	COLOR.a = shape;

}"

[sub_resource type="ShaderMaterial" id=530]
resource_local_to_scene = true
shader = SubResource( 529 )
shader_param/size_px = 0.0
shader_param/hole_size_px = 0.0
shader_param/outside_trans_px = 0
shader_param/inside_trans_px = 0

[sub_resource type="Animation" id=520]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ShockShader:material:render_priority")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ShockShader:material:shader_param/size_px")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShockShader:material:shader_param/hole_size_px")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=521]
resource_name = "shockwave"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ShockShader:material:shader_param/hole_size_px")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 40, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ShockShader:material:shader_param/size_px")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.4, -0.142872, 38, -0.5, -0.330284, 0.25, 0.165142 ),
"times": PoolRealArray( 0, 0.8 )
}

[node name="Shocker" type="Node2D"]
script = ExtResource( 1 )

[node name="DetectArea" type="Area2D" parent="."]
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 531 )

[node name="ShockerSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 135 )
animation = "loop"

[node name="ShockShader" type="ColorRect" parent="."]
material = SubResource( 530 )
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 520 )
anims/shockwave = SubResource( 521 )

[node name="ActiveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DetectArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]
